--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -795,7 +795,7 @@ So, for example, for main(), you will always have a inclusive cost of almost 100
 
 <qandaentry>
 <question>
-<para>The toolbar/menubar of my &kcachegrind; looks so spartanic. Is this normal?</para>
+<para>The toolbar/menubar of my &kcachegrind; looks so spartan. Is this normal?</para>
 </question>
 <answer>
 <para>
