Add a dummy qcachegrind.desktop (will not be installed)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1249330

--- a/README
+++ b/README
@@ -63,6 +63,9 @@ To not build in the source directories, do:
 
 The build includes the command line tool "cgview".
 
+Copy the resulting "qcachegrind" binary from the build directory into
+your $PATH.
+
 
 KCachegrind
 ------------
