Instructions are in README
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1249331

--- a/INSTALL
+++ b/INSTALL
@@ -1,3 +1,5 @@
-Build instructions can be found at 
+For build instructions see README.
+
+More details for KDE build:
 http://techbase.kde.org/Getting_Started/Build/KDE4
 
