{Q,K}Cachegrind now compiles without Qt3Support !!
Bump KCachegrind version to 0.7kde

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1255176

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,89 +1,3 @@
-2004/06/30
-	* Leak fixes
-	* Crash fixes on reload (make setData() synchroneous)
-	* Some update fixes in the data model (tracedata.cpp)
-	* Fix update problems in Function Profile
-	* Reselect active function on refresh in function profile
-	  with grouping on
-
-2004/04/28
-	* toplevel.h/cpp, kcachegrindui.rc
-	  - Switching Layouts
-	* multiview.cpp: Removed some qDebug's
-	* Same term fixes
-
-2004/04/26
-	* cachegrindloader.cpp, fixcost.cpp:
-	  - Allow Ranges in Subposition Spec, currently not used
-	  - Correctly parse "Desc: Trigger:"
-	  - Allow Event Spec (Long Name, Formula) with "event:"
-	* listutils.cpp:
-	  - make level meters for costs only 1 bar
-	    (2 with upper from 0..50%, lower 50%..100% is really confusing)
-	  - Besides from Call graph and Tree maps, truncate bars to
-	    only use needed size (removes lots of empty rectangles)
-	* CallGraphView:
-	  - some fixes when no data is loaded
-	* functionselection.cpp (Function Profile)
-	  - activation on mouse release to allow for context menu
-	* tracedata.cpp
-	  - more robust parsing of events lists
-	  - Introduction of Ranges (not currently used)
-	* utils.cpp:
-	  - more robust parsing functions	
-
-2004/04/05
-	* CallGraphView:
-	  - Add Context menu item "Export as Image"
-	  - Hide Birdseye-View if call-graph fits into widget
-	  - Error messages in Canvas when something goes wrong
-        * Some Fixes, qDebug->kdDebug
-
-2004/04/02
-	* In most views columns for 2nd Event Type added
-	* Context menus modified to allow quick change of 2nd Event Type
-	* Toolbar simplified (only most used actions)
-	* Terminology fixes ("cost type"->"event type",
-          "trace data"->"profile data", long names of Ir,Dr,...)
-	* Sorting costs in lists is always descending now
-	* New File menu item: "Add..." other profile data to current window
-        * Detect Cachegrind format by "events:" content, not file name
-	  Allows for arbitrary names of profile data files.
-
-2004/03/25
-	* New Class Addr as wrapper for memory addresses. Use 64bit
-	  to allow loading of data produced on 64bit architectures
-
-2004/03/17
-
-	* costtypeview.cpp, tracedata.h/cpp:
-	  Fixed deletion of custom types
-	* cachegrindloader.cpp, tracedata.h/cpp:
-	  Moved String compression handling in Cachegrind files
-	  to CachegrindLoader
-	* Do not show inclusive cost column in FunctionSelection
-	  side bar if not available
-	* Remove "isPartOfTrace" from Loader interface
-	  (we allow parts from multiple experiments for comp.)
-	* partview.cpp, partlistitem.h/cpp:
-	  Remove Column Callees, add Trigger
-
-2003/05/10
-
-	* Status progress on loading and cycle calculation
-	* Corrected order of trace parts (PID/PartNo/ThreadID)
-	* Allow adding traces (BUGGY...)
-
-2003/02/06
-
-	* Version 0.3a
-	* Bugfixes:
-	  - Compiles with KDE 3.0.x
-	  - Always select a first cost type
-	  - Loading from another directory
-
-
-2002/11/28
-
-	* Version 0.3
-	
+2011/9/23
+	* Compiles without Qt3 support
+	* Bump KCachegrind version to 0.7kde
