docs: add id attribute to <book> elements
svn path=/trunk/KDE/kdesdk/doc/kcachegrind/; revision=1320308

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -14,7 +14,7 @@
   <!ENTITY % English "INCLUDE">
 ]>
 
-<book lang="&language;">
+<book id="kcachegrind" lang="&language;">
 
 <bookinfo>
 <title>The &kcachegrind; Handbook</title>
