doc/index.docbook replace "written using KDE Frameworks 5"
With "written using KDE Frameworks".

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -55,7 +55,7 @@
 
 <abstract>
 <para>
-&kcachegrind; is a profile data visualization tool, written using &kf5-full;.
+&kcachegrind; is a profile data visualization tool, written using &kde-frameworks;.
 </para>
 </abstract>
 
